tests/models/struct/named/isize/fail/default.stderr
error[E0308]: `?` operator has incompatible types
 --> tests/models/struct/named/isize/fail/default.rs:2:1
  |
2 | #[model]
  | ^^^^^^^^ expected `isize`, found floating-point number
  |
  = note: `?` operator cannot convert from `{float}` to `isize`
  = note: this error originates in the attribute macro `model` (in Nightly builds, run with -Z macro-backtrace for more info)
